# dark-room-tui

./: .gitignore  DECISIONS.md  DOGFOOD.md  Makefile  README.md  dark_room.py  pyproject.toml
.omc/state/: agent-replay-d7cc2d05-946f-44eb-9998-c12acf987f69.jsonl  last-tool-error.json  mission-state.json  subagent-tracking.json
dark_room_tui/: __init__.py  app.py  engine.py  outside.py  path.py  room.py  ship.py  sound.py  tui.tcss  world.py
screenshots/: README.md  endscreen.tcell  gameplay.tcell  hero.tcell
screenshots/candidates/: README.md
tests/: perf.py  playtest.py  qa.py  sound_test.py
